--- a/.github/workflows/branch_protection.yml
+++ b/.github/workflows/branch_protection.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   create-branch-protection:
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
       - uses: actions/checkout@v3
       - uses: octokit/request-action@v2.1.7
