--- a/.github/workflows/branch_protection.yml
+++ b/.github/workflows/branch_protection.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: octokit/request-action@v2.1.7
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.INIT_TOKEN }}
           REQUEST_BODY: |
             {
               "required_status_checks": "strict",
