--- a/.github/workflows/branch_protection.yml
+++ b/.github/workflows/branch_protection.yml
@@ -25,7 +25,8 @@ jobs:
               "allow_force_pushes": false,
               "allow_deletions": false,
               "required_conversation_resolution": true,
-              "lock_branch": true
+              "lock_branch": true,
+              "enforce_admins": false
             }
         with:
           route: PUT /repos/{repository}/branches/{branch}/protection
