--- a/.github/workflows/branch_protection.yml
+++ b/.github/workflows/branch_protection.yml
@@ -16,20 +16,4 @@ jobs:
           route: PUT /repos/{repository}/branches/{branch}/protection
           repository: ${{ github.repository }}
           branch: master
-          body: |
-            {
-              "required_status_checks": "strict",
-              "required_pull_request_reviews": {
-                "dismissal_restrictions": {},
-                "dismiss_stale_reviews": true,
-                "require_code_owner_reviews": true,
-                "required_approving_review_count": 1
-              },
-              "restrictions": null,
-              "allow_force_pushes": false,
-              "allow_deletions": false,
-              "required_conversation_resolution": true,
-              "lock_branch": true,
-              "enforce_admins": false
-            }
-            
+          body: "{\"required_status_checks\":\"strict\",\"required_pull_request_reviews\":{\"dismissal_restrictions\":{},\"dismiss_stale_reviews\":true,\"require_code_owner_reviews\":true,\"required_approving_review_count\":1},\"restrictions\":null,\"allow_force_pushes\":false,\"allow_deletions\":false,\"required_conversation_resolution\":true,\"lock_branch\":true,\"enforce_admins\":false}"
