--- a/.github/workflows/branch_protection.yml
+++ b/.github/workflows/branch_protection.yml
@@ -8,12 +8,40 @@ jobs:
     runs-on: ubuntu-latest
     permissions: write-all
     steps:
-      - uses: actions/checkout@v3
-      - uses: octokit/request-action@v2.1.7
-        env:
-          GITHUB_TOKEN: ${{ secrets.INIT_TOKEN }}
-        with:
-          route: PUT /repos/{repository}/branches/{branch}/protection
-          repository: ${{ github.repository }}
-          branch: master
-          body: "{\"required_status_checks\":\"strict\",\"required_pull_request_reviews\":{\"dismissal_restrictions\":{},\"dismiss_stale_reviews\":true,\"require_code_owner_reviews\":true,\"required_approving_review_count\":1},\"restrictions\":null,\"allow_force_pushes\":false,\"allow_deletions\":false,\"required_conversation_resolution\":true,\"lock_branch\":true,\"enforce_admins\":false}"
+    - uses: actions/checkout@v3
+    - name: "Create release"
+      uses: "actions/github-script@v6"
+      with:
+        github-token: "${{ secrets.INIT_TOKEN }}"
+        script: |
+          try {
+            const response = await github.rest.repos.updateBranchProtection({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              branch: 'master',
+              required_status_checks: {
+                strict: true
+              },
+              enforce_admins: true,
+              required_pull_request_reviews: {
+                dismissal_restrictions: {},
+                dismiss_stale_reviews: true,
+                require_code_owner_reviews: true,
+                required_approving_review_count: 1,
+                require_last_push_approval: true,
+                bypass_pull_request_allowances: {}
+              },
+              restrictions: null,
+              required_linear_history: false,
+              allow_force_pushes: false,
+              allow_deletions: false,
+              block_creations: false,
+              required_conversation_resolution: true,
+              lock_branch: false,
+              allow_fork_syncing: true
+            });
+
+            core.exportVariable('URL', response.data.url);
+          } catch (error) {
+            core.setFailed(error.message);
+          }      
