--- a/.github/workflows/branch_protection.yml
+++ b/.github/workflows/branch_protection.yml
@@ -20,7 +20,10 @@ jobs:
               repo: context.repo.repo,
               branch: 'master',
               required_status_checks: {
-                strict: true
+                strict: true,
+                contexts: [
+                  'continuous-integration/travis-ci'
+                ]                
               },
               enforce_admins: true,
               required_pull_request_reviews: {
