--- a/.github/workflows/branch_protection.yml
+++ b/.github/workflows/branch_protection.yml
@@ -34,6 +34,7 @@ jobs:
                 require_last_push_approval: true,
                 bypass_pull_request_allowances: {}
               },
+              restrictions: null,
               required_linear_history: false,
               allow_force_pushes: false,
               allow_deletions: false,
