--- a/.github/workflows/branch_protection.yml
+++ b/.github/workflows/branch_protection.yml
@@ -18,12 +18,9 @@ jobs:
             const response = await github.rest.repos.updateBranchProtection({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              branch: 'master',
+              branch: 'masteri',
               required_status_checks: {
-                strict: true,
-                contexts: [
-                  'continuous-integration/travis-ci'
-                ]                
+                strict: true             
               },
               enforce_admins: true,
               required_pull_request_reviews: {
