--- a/.github/workflows/branch_protection.yml
+++ b/.github/workflows/branch_protection.yml
@@ -20,7 +20,8 @@ jobs:
               repo: context.repo.repo,
               branch: 'masteri',
               required_status_checks: {
-                strict: true             
+                strict: true,
+                checks: []
               },
               enforce_admins: true,
               required_pull_request_reviews: {
