Added Helm CI Checks run on Release Please completed

--- a/.github/workflows/helm-ci-checks.yaml
+++ b/.github/workflows/helm-ci-checks.yaml
@@ -2,6 +2,9 @@
 name: Helm CI Checks
 on:
   pull_request: {}
+  workflow_run:
+    workflows: ["Release Please"]
+    types: [completed]
 jobs:
   helm-ci-checks:
     runs-on: ubuntu-latest
