--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -12,13 +12,10 @@ jobs:
       pull-requests: write
     steps:
     - uses: actions/checkout@v3
-    - name: Parse comment
-      run: |
-        IFS=' ' read -r -a COMMENT_ARGS <<< "${{ github.event.comment.body }}"
-        echo "parsedComment={\"cluster\":\"${COMMENT_ARGS[0]}\", \"valuesPath\": \"${COMMENT_ARGS[1]}\"}" >> $GITHUB_OUTPUT
     - uses: actions/github-script@v6
       with:
         script: |
+          console.log(github.event.comment.body)
           github.rest.issues.addLabels({
             issue_number: context.issue.number,
             owner: context.repo.owner,
