--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -15,13 +15,12 @@ jobs:
     - uses: actions/github-script@v6
       with:
         script: |
-          console.log(github.event.comment.body)
+          console.log(${{ github.event.comment.body }})
           github.rest.issues.addLabels({
             issue_number: context.issue.number,
             owner: context.repo.owner,
             repo: context.repo.repo,
             labels: [
-              "cluster:${{ steps.vars.outputs.parsedComment.cluster }}",
-              "valuesPath:${{ steps.vars.outputs.parsedComment.valuesPath }}"
+              "test"
             ]
           })
