--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/github-script@v6
       with:
         script: |
-          console.log(${{ github.event.comment.body }})
+          console.log("${{ github.event.comment.body }}")
           github.rest.issues.addLabels({
             issue_number: context.issue.number,
             owner: context.repo.owner,
