--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -15,12 +15,13 @@ jobs:
     - uses: actions/github-script@v6
       with:
         script: |
-          console.log("${{ github.event.comment.body }}")
+          const commentParams = "${{ github.event.comment.body }}".split(' ');
           github.rest.issues.addLabels({
             issue_number: context.issue.number,
             owner: context.repo.owner,
             repo: context.repo.repo,
             labels: [
-              "test"
+              "cluster:" + commentParams[0],
+              "valuesPath:" + commentParams[1]
             ]
-          })
+          });
