--- a/.github/workflows/run_release.yaml
+++ b/.github/workflows/run_release.yaml
@@ -17,4 +17,4 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run release
       run: |
-        echo "${{ toJSON(github) }}"
+        echo "${{ github.event.workflow_run.event }}"
