--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -22,3 +22,12 @@ jobs:
             repo: context.repo.repo,
             labels: [commentParams]
           });
+
+  run-release:
+    needs: add-deploy-labels
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Run release
+      run: |
+        echo "${{ github.event.issue.pull_request.labels }}"
