--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -30,4 +30,4 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run release
       run: |
-        echo "${{ github.event.issue.pull_request.labels }}"
+        echo "${{ github.event.issue.labels }}"
