--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -22,6 +22,7 @@ jobs:
             repo: context.repo.repo,
             labels: [commentParams]
           });
+          return commentParams;
 
   run-release:
     needs: add-deploy-labels
@@ -30,4 +31,4 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run release
       run: |
-        echo "${{ toJSON(github.event.issue.pull_request) }}"
+        echo "${{ toJSON(needs.add-deploy-labels.outputs.result) }}"
