--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -14,6 +14,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/github-script@v6
       with:
+        result-encoding: string
         script: |
           const commentParams = "${{ github.event.comment.body }}".substring(1).replaceAll(" ", ":");
           github.rest.issues.addLabels({
