--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -8,11 +8,14 @@ jobs:
   add-deploy-labels:
     if: github.event.issue.pull_request && contains(github.event.comment.body, '/deploy')
     runs-on: ubuntu-latest
+    outputs:
+      commentParams: ${{ steps.add-deploy-labels.outputs.result }}
     permissions:
       pull-requests: write
     steps:
     - uses: actions/checkout@v3
     - uses: actions/github-script@v6
+      id: add-deploy-labels
       with:
         result-encoding: string
         script: |
@@ -32,4 +35,4 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run release
       run: |
-        echo "${{ toJSON(needs.add-deploy-labels.outputs.result) }}"
+        echo "${{ toJSON(needs.add-deploy-labels.outputs.commentParams) }}"
