--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -35,4 +35,48 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run release
       run: |
-        echo "${{ toJSON(needs.add-deploy-labels.outputs.commentParams) }}"
+        echo "${{ needs.add-deploy-labels.outputs.commentParams }}"
+
+  remove-deploy-labels:
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/delete')
+    runs-on: ubuntu-latest
+    outputs:
+      commentParams: ${{ steps.remove-deploy-labels.outputs.result }}
+    permissions:
+      pull-requests: write
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/github-script@v6
+      id: remove-deploy-labels
+      with:
+        result-encoding: string
+        script: |
+          const commentParams = "${{ github.event.comment.body }}".split(' ');
+          const opts = github.rest.issues.listLabelsOnIssue({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo
+          });
+          const labels = await github.paginate(opts)
+          const setLabels = []
+          for (const label of labels) {
+            if (!label.name.startsWith("deploy:" + commentParams[1])) {
+              setLabels.push(label.name)
+            }
+          }
+          github.rest.issues.setLabels({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            labels: setLabels
+          });
+          return commentParams;
+
+  delete-release:
+    needs: remove-deploy-labels
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Delete release
+      run: |
+        echo "${{ needs.remove-deploy-labels.outputs.commentParams }}"
