--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -57,7 +57,7 @@ jobs:
             owner: context.repo.owner,
             repo: context.repo.repo
           });
-          console.log(labels)
+          console.log(typeof labels)
           const setLabels = []
           for (const label of labels) {
             if (!label.name.startsWith("deploy:" + commentParams[1])) {
