--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -52,7 +52,7 @@ jobs:
         result-encoding: string
         script: |
           const commentParams = "${{ github.event.comment.body }}".split(' ');
-          const { data: labels } = await github.rest.issues.listLabelsOnIssue({
+          const labels = await github.rest.issues.listLabelsOnIssue({
             issue_number: context.issue.number,
             owner: context.repo.owner,
             repo: context.repo.repo
