--- a/.github/workflows/run_release.yaml
+++ b/.github/workflows/run_release.yaml
@@ -5,10 +5,38 @@ on:
     types: [edited, synchronize]
 
 jobs:
-  run-release:
+  get-deploy-labels:
     runs-on: ubuntu-latest
+    outputs:
+      deployLabels: ${{ steps.get-deploy-labels.outputs.result }}
     steps:
     - uses: actions/checkout@v3
-    - name: Run release
-      run: |
-        echo "${{ toJSON(github.event.pull_request.labels) }}"
+    - uses: actions/github-script@v6
+      id: get-deploy-labels
+      with:
+        result-encoding: json
+        script: |
+          const commentParams = "${{ github.event.comment.body }}".split(' ');
+          const { data: labels } = await github.rest.issues.listLabelsOnIssue({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo
+          });
+          const deployLabels = []
+          for (const label of labels) {
+            if (label.name.startsWith("deploy)) {
+              deployLabels.push(label.name)
+            }
+          }
+          return deployLabels;
+
+  run-release:
+    runs-on: ubuntu-latest
+    needs: get-deploy-labels
+    strategy:
+      matrix:
+        deployLabel: ${{ fromJSON(needs.get-deploy-labels.outputs.deployLabels) }}
+    steps:
+      - name: Release ${{ matrix.deployLabel }}
+        run: |
+          echo ${{ matrix.deployLabel }}
