--- a/.github/workflows/run_release.yaml
+++ b/.github/workflows/run_release.yaml
@@ -16,9 +16,8 @@ jobs:
       with:
         result-encoding: json
         script: |
-          const commentParams = "${{ github.event.comment.body }}".split(' ');
           const { data: labels } = await github.rest.issues.listLabelsOnIssue({
-            issue_number: context.issue.number,
+            issue_number: context.pull_request.number,
             owner: context.repo.owner,
             repo: context.repo.repo
           });
