--- a/.github/workflows/run_release.yaml
+++ b/.github/workflows/run_release.yaml
@@ -17,7 +17,7 @@ jobs:
         result-encoding: json
         script: |
           const { data: labels } = await github.rest.issues.listLabelsOnIssue({
-            issue_number: context.pull_request.number,
+            issue_number: context.event.number,
             owner: context.repo.owner,
             repo: context.repo.repo
           });
