--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -67,16 +67,13 @@ jobs:
     permissions:
       pull-requests: write
     needs:
-    - remove-deploy-labels
     - add-deploy-labels
+    - remove-deploy-labels
     if: always() && contains(needs.*.result, 'success')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name : test echo
-      env : { CONTENT : "${{ toJson(needs.*.outputs.commentParams) }}" }
-      run : "echo $CONTENT"
-    # - uses: ./.github/actions/sim-jenkins
-    #   with:
-    #     pr-id: ${{ github.event.issue.number }}
-    #     deploy-label: ${{ needs.*.outputs.commentParams }}
+    - uses: ./.github/actions/sim-jenkins
+      with:
+        pr-id: ${{ github.event.issue.number }}
+        deploy-label: ${{ contains(needs.add-deploy-labels.result, 'success') && needs.add-deploy-labels.outputs.commentParams || needs.remove-deploy-labels.outputs.commentParams }}
