--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -61,7 +61,7 @@ jobs:
             repo: context.repo.repo,
             labels: setLabels
           });
-          return commentParams;
+          return "${{ github.event.comment.body }}".substring(1).replaceAll(" ", ":");
 
   run-jenkins:
     permissions:
