--- a/.github/workflows/run_release.yaml
+++ b/.github/workflows/run_release.yaml
@@ -25,6 +25,7 @@ jobs:
           return deployLabels;
 
   run-jenkins:
+    if: needs.get-deploy-labels.outputs.deployLabels
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
