--- a/.github/actions/get-deploy-labels/action.yaml
+++ b/.github/actions/get-deploy-labels/action.yaml
@@ -14,7 +14,7 @@ runs:
     - uses: actions/github-script@v6
       id: get-deploy-labels
       with:
-        result-encoding: string
+        result-encoding: json
         script: |
           const { data: labels } = await github.rest.issues.listLabelsOnIssue({
             issue_number: ${{ inputs.pr-id }},
