--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -47,8 +47,9 @@ jobs:
         result-encoding: json
         script: |
           const commentParams = "${{ github.event.comment.body }}".split(' ');
-          labels = JSON.parse(${{ toJSON(steps.get-deploy-labels.outputs.deploy-labels) }});
+          const labels = JSON.parse(${{ toJSON(steps.get-deploy-labels.outputs.deploy-labels) }});
           console.log(labels);
+          console.log(typeof labels);
           let setLabels = []
           for (const label of labels) {
             if (!label.name.startsWith("deploy:" + commentParams[1])) {
