--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -48,7 +48,7 @@ jobs:
         script: |
           const commentParams = "${{ github.event.comment.body }}".split(' ');
           const labels = JSON.parse(${{ toJSON(steps.get-deploy-labels.outputs.deploy-labels) }});
-          console.log(labels);
+          console.log(JSON.stringify(labels));
           console.log(typeof labels);
           let setLabels = []
           for (const label of labels) {
