--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -49,6 +49,7 @@ jobs:
           const commentParams = "${{ github.event.comment.body }}".split(' ');
           const labels = JSON.parse(${{ toJSON(steps.get-deploy-labels.outputs.deploy-labels) }});
           console.log(JSON.stringify(labels));
+          console.log(labels[0]);
           console.log(typeof labels);
           let setLabels = []
           for (const label of labels) {
