--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -48,11 +48,8 @@ jobs:
         script: |
           const commentParams = "${{ github.event.comment.body }}".split(' ');
           const labels = JSON.parse(${{ toJSON(steps.get-deploy-labels.outputs.deploy-labels) }});
-          console.log(JSON.stringify(labels));
-          console.log(labels[0]);
-          console.log(typeof labels);
           let setLabels = []
-          for (const label of labels) {
+          for (label in labels) {
             if (!label.name.startsWith("deploy:" + commentParams[1])) {
               setLabels.push(label.name)
             }
