--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -47,7 +47,7 @@ jobs:
         result-encoding: json
         script: |
           const labels = JSON.parse(${{ toJSON(steps.get-deploy-labels.outputs.deploy-labels) }});
-          if ("${{ github.event.comment.body }}") == "/delete all") {
+          if ("${{ github.event.comment.body }}" == "/delete all") {
             return labels;
           }
           const commentParams = "${{ github.event.comment.body }}".split(' ');
