--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -52,14 +52,11 @@ jobs:
             return labels;
           }
           let setLabels = []
-          console.log(labels);
-          console.log(commentParams);
           for (const label of labels) {
             if (!label.startsWith("deploy:" + commentParams[1])) {
-              setLabels.push(label.name)
+              setLabels.push(label)
             }
           }
-          console.log(setLabels);
           github.rest.issues.setLabels({
             issue_number: context.issue.number,
             owner: context.repo.owner,
