--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -48,12 +48,8 @@ jobs:
         script: |
           const labels = JSON.parse(${{ toJSON(steps.get-deploy-labels.outputs.deploy-labels) }});
           const commentParams = "${{ github.event.comment.body }}".split(' ');
-          if (commentParams[1] == "all") {
-            return labels;
-          }
-          let setLabels = []
           for (const label of labels) {
-            if (!label.startsWith("deploy:" + commentParams[1])) {
+            if (commentParams[1] != "all" && !label.startsWith("deploy:" + commentParams[1])) {
               setLabels.push(label)
             }
           }
@@ -63,7 +59,7 @@ jobs:
             repo: context.repo.repo,
             labels: setLabels
           });
-          return ["${{ github.event.comment.body }}".substring(1).replaceAll(" ", ":")];
+          return commentParams[1] == all ? labels.map(l => l.replace("deploy", "delete").replace(/:[^:]+$/, "")) : ["${{ github.event.comment.body }}".substring(1).replaceAll(" ", ":")];
 
   run-jenkins:
     permissions:
