--- a/.github/workflows/feature_release.yaml
+++ b/.github/workflows/feature_release.yaml
@@ -60,7 +60,7 @@ jobs:
             repo: context.repo.repo,
             labels: setLabels
           });
-          return commentParams[1] == all ? labels.map(l => l.replace("deploy", "delete").replace(/:[^:]+$/, "")) : ["${{ github.event.comment.body }}".substring(1).replaceAll(" ", ":")];
+          return commentParams[1] == "all" ? labels.map(l => l.replace("deploy", "delete").replace(/:[^:]+$/, "")) : ["${{ github.event.comment.body }}".substring(1).replaceAll(" ", ":")];
 
   run-jenkins:
     permissions:
